# nn-zero-hero

./: love2.py  loveee.py  main.py  mgrad.py  pyproject.toml
MIT-DL-Intro/: 1_Pytorch_Introduction.ipynb  2_Pytorch_Autograd.ipynb  3_Pytorch_Optimizers.ipynb  4_Pytorch_Modules.ipynb  Copy_of_PT_Part1_Intro.ipynb  TF_Part1_Intro.ipynb  lab1.ipynb  notes.md
MIT-DL_Grad/: 1_Pytorch_Introduction.ipynb  2_Pytorch_Autograd.ipynb  5_Pytorch_Dataloader.ipynb  hw-1.md  hw1.ipynb  torch_tutorial.ipynb
andrej-lectures/makemore/: Bengio_prob_LM (1).ipynb  MLP-2.ipynb  MLP.ipynb  bigram.ipynb  trigram.ipynb
andrej-lectures/micrograd/: micrograd.ipynb  micrograd.py
